@@ -1,14 +1,12 @@
-package com.initgrep.cr.msauth.auth.providers.converter;
+package com.initgrep.cr.msauth.auth.converter;
 
 import com.initgrep.cr.msauth.auth.dto.TokenModel;
 import com.initgrep.cr.msauth.auth.dto.UserModel;
 import com.initgrep.cr.msauth.auth.util.UtilMethods;
 import lombok.RequiredArgsConstructor;
 import lombok.Setter;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.convert.converter.Converter;
-import org.springframework.lang.NonNull;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.oauth2.jwt.JwtClaimsSet;
 import org.springframework.security.oauth2.jwt.JwtEncoder;
@@ -17,42 +15,44 @@ import org.springframework.stereotype.Component;
 
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.Collections;
+import java.util.List;
 
-import static com.initgrep.cr.msauth.auth.constants.AuthConstants.AUTHORIZATION_SERVER;
+import static com.initgrep.cr.msauth.auth.constants.AuthConstants.RESOURCE_SERVER;
 import static com.initgrep.cr.msauth.auth.constants.JwtExtendedClaimNames.SCOPE;
 
-@Setter
 @RequiredArgsConstructor
+@Setter
 @Component
-public class UserToJwtRefreshTokenConverter implements Converter<Authentication, TokenModel> {
+public class UserToJwtAccessTokenConverter implements Converter<Authentication, TokenModel> {
 
     private final AuthorityToScopeConverter authorityToScopeConverter;
+    private final JwtEncoder accessTokenEncoder;
 
-    @Qualifier("jwtRefreshTokenEncoder")
-    private final JwtEncoder refreshTokenEncoder;
     @Value("${spring.application.name}")
     private String issuerApp;
 
-    @Value("${app.refresh-token.expiry-duration-days}")
-    private int refreshTokenExpiryDays;
+    @Value("${app.access-token.expiry-duration-min}")
+    private int accessTokenExpiryMinutes;
+
 
     @Override
-    @NonNull
     public TokenModel convert(Authentication authentication) {
-        var user = (UserModel) authentication.getPrincipal();
-        var now = Instant.now();
-        var jit = UtilMethods.guid();
-        var claimSet = JwtClaimsSet.builder()
+        UserModel user = (UserModel) authentication.getPrincipal();
+        Instant now = Instant.now();
+        String jit =  UtilMethods.guid();
+        JwtClaimsSet claimsSet = JwtClaimsSet.builder()
                 .id(jit)
                 .issuer(issuerApp)
                 .issuedAt(now)
-                .expiresAt(now.plus(refreshTokenExpiryDays, ChronoUnit.DAYS))
+                .expiresAt(now.plus(accessTokenExpiryMinutes, ChronoUnit.MINUTES))
                 .subject(user.getIdentifier())
-                .audience(Collections.singletonList(AUTHORIZATION_SERVER))
+                .audience(List.of(RESOURCE_SERVER))
                 .claim(SCOPE, authorityToScopeConverter.convert(user.getGrantedAuthorities()))
                 .build();
-        String token = refreshTokenEncoder.encode(JwtEncoderParameters.from(claimSet)).getTokenValue();
-        return new TokenModel(jit, token);
+
+        String token = accessTokenEncoder.encode(JwtEncoderParameters.from(claimsSet)).getTokenValue();
+        return  new TokenModel(jit, token);
     }
+
+
 }
